      if it's empty, thereby avoiding a "Can't use string ("") as a HASH
      ref" error.
    + Correctly handle only one argument being passed to "block" or
      "unblock".
  * checkbashisms:
    + Add an updated check for $'' which is much less prone to false
      positives. Thanks Filippo Giunchedi. (Closes: #504292)
    + Add an updated check for $"" based on Filippo's $'' patch.
  * Debbugs.pm:
    + Really fix the special-casing of the "archive" key in select() to
      get rid of an uninitialized value warning.
    + Check whether a SOAP call returned a valid value before attempting to
      call result() on it.
    + Produce more useful error messages on failure. (Closes: #496013)
  * debdiff: When comparing source packages, do so in version order rather
    than the order the .dsc files were passed on the command line. (May
    be disabled using --no-auto-ver-sort if desired). (Closes: #505264)
  * tagpending: If an error occurs retrieving the list of bugs for the
    package, suggest using "--force" in order to tag all the bugs as
    pending without attempting to query the BTS.

  [ James Vega ]
  * debcheckout:  Add support for working around repositories that don't
    follow standard behavior (like bzr.d.o not running a smart server).

 -- Patrick Schoenfeld <schoenfeld@debian.org>  Thu, 06 Nov 2008 13:39:09 +0100

devscripts (2.10.40) unstable; urgency=low

  [ Adam D. Barratt ]
  * bts:
    + Update the manpage to mention local caching in the description
      section and correct a typo. (Closes: #499397)
    + Accept a command consisting purely of a comment. (Closes: #501252)
  * cowpoke:
    + Update to new upstream version
      - Multiple architecture and distribution support.
      - Options are now specified using --option rather than being listed
        after the .dsc file.
      - There is now a --create option to allow new build roots to be
        easily created.
      - There are two new configuration file options BUILDD_DIST (the